# LaboratoryWorks

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c
data/bubbleSort/: bubbleSort_orderedBackwards_time.csv  bubbleSort_ordered_n_comps.csv  bubbleSort_ordered_time.csv  bubbleSort_random_time.csv
data/combSort/: combSort_orderedBackwards_n_comps.csv  combSort_orderedBackwards_time.csv  combSort_ordered_n_comps.csv  combSort_ordered_time.csv  combSort_random_n_comps.csv  combSort_random_time.csv
data/countSort/: countSort_orderedBackwards_n_comps.csv  countSort_orderedBackwards_time.csv  countSort_ordered_time.csv  countSort_random_n_comps.csv  countSort_random_time.csv
data/insertionSort/: insertionSort_orderedBackwards_time.csv  insertionSort_ordered_n_comps.csv  insertionSort_ordered_time.csv  insertionSort_random_n_comps.csv  insertionSort_random_time.csv
data/mergeSort/: mergeSort_orderedBackwards_time.csv  mergeSort_ordered_time.csv  mergeSort_random_n_comps.csv  mergeSort_random_time.csv
data/radixSort/: radixSort_orderedBackwards_n_comps.csv  radixSort_orderedBackwards_time.csv  radixSort_ordered_time.csv  radixSort_random_time.csv
data/selectionSort/: selectionSort_orderedBackwards_n_comps.csv  selectionSort_orderedBackwards_time.csv  selectionSort_ordered_time.csv  selectionSort_random_time.csv
data/shellSort/: shellSort_orderedBackwards_n_comps.csv  shellSort_orderedBackwards_time.csv  shellSort_ordered_n_comps.csv  shellSort_ordered_time.csv  shellSort_random_n_comps.csv  shellSort_random_time.csv
data/stdQsort/: stdQsort_orderedBackwards_time.csv  stdQsort_ordered_time.csv  stdQsort_random_time.csv
data/std_qsort/: std_qsort_ordered.csv  std_qsort_ordered_backwards.csv  std_qsort_random.csv
data/timSort/: timSort_orderedBackwards_n_comps.csv  timSort_orderedBackwards_time.csv  timSort_ordered_n_comps.csv  timSort_ordered_time.csv  timSort_random_n_comps.csv  timSort_random_time.csv
headers/: matrix.h
include/: generators.h  matrix.h  matrix_tests.h  mystring.h  sets.h  sort_funcs.h  time_test.h  xorshift.h
include/vector/: vector.c  vector.h  vector_tests.c  vector_tests.h
include/void_vector/: void_vector.c  void_vector.h  void_vector_tests.c  void_vector_tests.h
sources/: 10_reverse_words_order.c  11_get_word_before_first_word_with_symbol.c  12_find_last_equal_word_in_both_str.c  13_has_string_equal_words.c  14_has_str_words_from_equal_symbols.c  15_get_str_from_words_not_equal_to_the_last.c  16_1_find_last_equal_word_in_both_str.c  16_2_get_word_before_first_word_in_both_str.c  17_1_remove_words_equal_to_the_last.c  17_2_remove_palindromes.c  18_add_words_to_shorter_str.c  19_is_substring_by_symbols.c  1_remove_spaces.c  2_1_remove_adjacent_equal_letters.c  2_2_remove_extra_spaces.c  3_1_letters_to_start_digits_to_end.c  3_2_digits_to_end_reverse.c  3_3_letters_to_end_digits_to_start.c  3_4_reverse_letters_in_words.c  3_digit_to_start_reverse.c  4_replace_digits_by_spaces.c  5_replace.c  6_are_words_sorted.c  7_output_words_in_reverse_order.c  8_count_palindromes.c  8_count_poly.c  9_mix_words.c  CMakeLists.txt  generators.c  main.c  matrix.c  matrix_tests.c  mystring.c  sets.c  sort_funcs.c  time_test.c  xorshift.c
tests/: mystring_tests.h  sets_tests.h  tests.h
