set(SOURCES "main.c" "mystring.c")
add_executable(${PROJECT_NAME} ${SOURCES})

set(TASK_1_SOURCES "1_remove_spaces.c" "mystring.c")
add_executable(${TASK_1_NAME} ${TASK_1_SOURCES})

set(TASK_2_1_SOURCES "2_1_remove_adjacent_equal_letters.c" "mystring.c")
add_executable(${TASK_2_1_NAME} ${TASK_2_1_SOURCES})

set(TASK_2_2_SOURCES "2_2_remove_extra_spaces.c" "mystring.c")
add_executable(${TASK_2_2_NAME} ${TASK_2_2_SOURCES})

set(TASK_3_SOURCES "3_digit_to_start_reverse.c" "mystring.c")
add_executable(${TASK_3_NAME} ${TASK_3_SOURCES})

set(TASK_3_1_SOURCES "3_1_letters_to_start_digits_to_end.c" "mystring.c")
add_executable(${TASK_3_1_NAME} ${TASK_3_1_SOURCES})

set(TASK_4_SOURCES "4_replace_digits_by_spaces.c" "mystring.c")
add_executable(${TASK_4_NAME} ${TASK_4_SOURCES})

set(TASK_5_SOURCES "5_replace.c" "mystring.c")
add_executable(${TASK_5_NAME} ${TASK_5_SOURCES})

set(TASK_6_SOURCES "6_are_words_sorted.c" "mystring.c")
add_executable(${TASK_6_NAME} ${TASK_6_SOURCES})

set(TASK_7_SOURCES "7_output_words_in_reverse_order.c" "mystring.c")
add_executable(${TASK_7_NAME} ${TASK_7_SOURCES})

set(TASK_8_SOURCES "8_count_poly.c" "mystring.c")
add_executable(${TASK_8_NAME} ${TASK_8_SOURCES})

set(TASK_9_SOURCES "9_mix_words.c" "mystring.c")
add_executable(${TASK_9_NAME} ${TASK_9_SOURCES})

set(TASK_10_SOURCES "10_reverse_words_order.c" "mystring.c")
add_executable(${TASK_10_NAME} ${TASK_10_SOURCES})

set(TASK_11_SOURCES "11_get_word_before_first_word_with_symbol.c" "mystring.c")
add_executable(${TASK_11_NAME} ${TASK_11_SOURCES})

set(TASK_12_SOURCES "12_find_last_equal_word_in_both_str.c" "mystring.c")
add_executable(${TASK_12_NAME} ${TASK_12_SOURCES})

set(TASK_19_SOURCES "19_is_substring_by_symbols.c" "mystring.c")
add_executable(${TASK_19_NAME} ${TASK_19_SOURCES})

